# seqforge

./: .gitignore  .markdownlint-cli2.yaml  .pre-commit-config.yaml  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  PROJECT_BRIEF.md  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: benchmark.yml  ci.yml  claude.yml  docs.yml  release.yml
concepts/artifacts/: index.html
concepts/identifying/: index.html
concepts/refusal/: index.html
docs/: design.md  getting-started.md  index.md  kb-authoring.md  tutorial.md
docs/concepts/: artifacts.md  identifying.md  refusal.md
docs/kb/: 10x-3p-gex-v2.md  10x-3p-gex-v3.md  bd-rhapsody-wta.md  bulk-rnaseq-pe.md  index.md  splitseq.md
docs/stylesheets/: extra.css
docs/tutorials/: adding-a-technology.md  step-by-step.md  with-claude.md
evals/: README.md
evals/benchmark/GSE126954/: expected.yaml  records.json
evals/benchmark/GSE126954/inputs/: recipe.yaml
evals/benchmark/GSE234962/: expected.yaml  records.json
evals/benchmark/GSE234962/inputs/: recipe.yaml
evals/benchmark/GSE256266/: expected.yaml  records.json
evals/benchmark/GSE256266/inputs/: recipe.yaml
evals/benchmark/GSE274290/: expected.yaml  records.json
evals/benchmark/GSE274290/inputs/: recipe.yaml
evals/benchmark/GSE283483-bulk/: expected.yaml  records.json
evals/benchmark/GSE283483-bulk/inputs/: recipe.yaml
evals/benchmark/GSE283483-multiome-atac/: expected.yaml  records.json
evals/benchmark/GSE283483-multiome-atac/inputs/: recipe.yaml
evals/benchmark/GSE283483-multiome-gex/: expected.yaml  records.json
evals/benchmark/GSE283483-multiome-gex/inputs/: recipe.yaml
evals/benchmark/PRJNA1027859/: expected.yaml  records.json
evals/benchmark/PRJNA1027859/inputs/: recipe.yaml
evals/benchmark/PRJNA1195922/: expected.yaml  records.json
evals/benchmark/PRJNA1195922/inputs/: recipe.yaml
evals/benchmark/PRJNA658829/: expected.yaml  records.json
evals/benchmark/PRJNA658829/inputs/: recipe.yaml
evals/cases/10x-v2-bytes-only/: expected.yaml
evals/cases/10x-v3-bytes-only/: expected.yaml
evals/cases/10x-v3-prose/: expected.yaml
evals/cases/10x-v3-prose/inputs/: recipe.yaml
evals/cases/PRJNA1027859/: expected.yaml  records.json
evals/cases/PRJNA1027859/inputs/: recipe.yaml
evals/cases/bd-rhapsody-wta-bytes-only/: expected.yaml
evals/cases/bd-rhapsody-wta-bytes-only/inputs/: recipe.yaml
evals/cases/bd-rhapsody-wta-enhanced-v1-bytes-only/: expected.yaml
evals/cases/bd-rhapsody-wta-enhanced-v2-bytes-only/inputs/: recipe.yaml
evals/cases/bulk-metadata-vs-single-cell-reads/inputs/: recipe.yaml
evals/cases/bulk-pe-bytes-only/: expected.yaml
evals/cases/bulk-pe-bytes-only/inputs/: recipe.yaml
evals/cases/chemistry-unstated-trap/: expected.yaml
evals/cases/chemistry-unstated-trap/metadata/: methods.txt
evals/cases/prose/10x-v3-prose/: expected.yaml
evals/cases/refusal/ont-unsupported/: expected.yaml
evals/cases/single-cell-metadata-vs-bulk-reads/: expected.yaml
evals/cases/truncated-gzip/: expected.yaml
evals/cases/v2-metadata-vs-v3-reads/: expected.yaml
getting-started/: index.html
kb/: index.html
kb-authoring/: index.html
kb/10x-3p-gex-v2/: index.html
kb/10x-3p-gex-v3/: index.html
kb/bd-rhapsody-wta/: index.html
kb/bulk-rnaseq-pe/: index.html
kb/splitseq/: index.html
search/: search_index.json
skills/: install.py
skills/seqforge-compose/: SKILL.md
skills/seqforge-exam/: SKILL.md
skills/seqforge-harvest/: SKILL.md
skills/seqforge-io/: SKILL.md
skills/seqforge-journal/: SKILL.md
skills/seqforge-kb-author/: SKILL.md
skills/seqforge-manifest/: SKILL.md
skills/seqforge-orchestrate/: SKILL.md
skills/seqforge-resolve/: SKILL.md
src/seqforge/: __init__.py  cli.py  e2e.py  project.py  workspace.py
src/seqforge/cli/: __init__.py  __main__.py  _common.py  compose.py  eval.py  harvest.py  hook.py  io.py  kb.py  manifest.py  preflight.py  probe.py  processing.py  project.py  report.py  resolve.py  root.py  run.py  schema.py
src/seqforge/compose/: __init__.py  core.py  gates.py  params.py
src/seqforge/evals/: __init__.py  case.py  grade.py  run.py
src/seqforge/fingerprint/: __init__.py  build.py  load.py  pack.py  subsample.py
src/seqforge/harvest/: __init__.py  extract.py  fields.py  normalize.py  prep.py  providers.py  verify.py
src/seqforge/hooks/: __init__.py  guards.py
src/seqforge/io/: __init__.py  archive.py  attributes.py  benchmark.py  efo.py  onlist.py  remote.py  sra.py  taxonomy.py
src/seqforge/kb/: __init__.py  anchor.py  generate.py  loader.py  roundtrip.py  schema.py
src/seqforge/manifest/: __init__.py  fill.py  hash.py  instruct.py  policy.py  validate.py
src/seqforge/models/: __init__.py  assertion.py  base.py  blocker.py  conflict.py  dataset.py  evidenced.py  fingerprint.py  manifest.py  observation.py  processing.py  records.py  resolve.py
src/seqforge/probe/: __init__.py  core.py  signals.py  streaming.py
src/seqforge/report/: __init__.py  collect.py  flow.py  model.py  panels.py  render.py
src/seqforge/resolve/: __init__.py  assign.py  cache.py  confuse.py  engine.py  escalate.py  evaluators.py  geometry.py  group.py  provenance.py  records.py  scoring.py  window.py
src/seqforge/workflows/: __init__.py  cram.py  fragments.py  h5ad.py  qc.py
tests/: test_archive.py  test_cli.py  test_compile.py  test_cram.py  test_e2e.py  test_evals.py  test_extract.py  test_fingerprint.py  test_fragments.py  test_geometry.py  test_h5ad.py  test_harvest.py  test_hooks.py  test_index_reads.py  test_io.py  test_kb.py  test_models.py  test_negatives.py  test_over_length.py  test_partition.py  test_probe.py  test_provenance.py  test_qc.py  test_records.py  test_remote.py  test_report.py  test_resolve.py  test_skills.py  test_sra.py  test_taxonomy.py  test_validate.py
tests/fixtures/archive/: PRJNA1027859.bioproject.xml  PRJNA1027859.biosample.xml  PRJNA1027859.sra.xml
tutorial/: index.html
tutorials/adding-a-technology/: index.html
tutorials/step-by-step/: index.html
tutorials/with-claude/: index.html
(+49 files in other folders)
