[project]
name = "seqforge"
description = "Compile arbitrary FASTQ + messy metadata into a validated, machine-independent sequencing library manifest and a runnable Snakemake config."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
authors = [{ name = "Liu Lab" }]
keywords = ["bioinformatics", "single-cell", "fastq", "snakemake", "manifest"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Typing :: Typed",
]
# CalVer YYYY.M.PATCH (patch resets each month), set statically here and mirrored in CHANGELOG.md —
# same scheme as the sibling repos.
version = "2026.7.1"
dependencies = [
    "pydantic>=2.7",
    "typer>=0.12",
    "pyyaml>=6",
    "numpy>=2",
    "pooch>=1.8",
    "requests>=2.31",
    "tqdm>=4",
    # PDF text extraction for `harvest`. A hard dependency, not an extra: `read_document` advertises
    # .pdf, and a paper is the normal shape of the prose seqforge is handed. It was lazily imported
    # with a "pip install pypdf" remedy, which meant no supported install of seqforge could read the
    # one document type the pilot dataset ships.
    "pypdf>=4",
    # PyMuPDF is the DEFAULT PDF text extractor for `harvest`, and it is here for ROBUSTNESS, not
    # cleverness: an end-to-end harvest eval over ten real C. elegans manuscripts found pypdf raising
    # PdfReadError on two of them (a duplicate /FontFile), while PyMuPDF read every one. It is AGPL-3.0
    # — the one non-permissive dependency — accepted because seqforge is an internal tool that emits
    # offline Snakefiles (not a network service), so the copyleft's reach is minimal; `--pdf-backend
    # pypdf` (BSD) stays available for anyone who needs to avoid it. We call `get_text` WITHOUT sort,
    # because geometric sorting interleaves two-column pages (see harvest/normalize.py).
    "PyMuPDF>=1.24",
    # pdfplumber (MIT) detects in-text tables and renders them to markdown that is spliced into the
    # canonical text, so a sample-metadata table cell is quotable and greps back. Same argument as
    # openpyxl below — papers ship sample metadata as tables — so it is a hard dependency, used by
    # whichever text backend is chosen.
    "pdfplumber>=0.11",
    # Excel text extraction for `harvest`, same weight as pypdf: papers ship sample metadata as
    # supplementary `.xlsx` tables, and `read_document` advertises `.xlsx`. A workbook is a zip of
    # XML — read as plain text it is garbage — so this is a hard dependency, not an extra.
    "openpyxl>=3.1",
    # The pilot's deliverable format. A normal dependency, not an environment: writing an .h5ad is
    # seqforge's own output-format job, the same shape of thing as reading a PDF — it is not an
    # aligner, so no liulab-runtime env or container is needed for it. Only
    # the STAR step needs one.
    "anndata>=0.10",
    # NOTE: liulab-genome and liulab-data are deliberately NOT listed here. They are lab-internal git
    # packages, and PyPI rejects any distribution whose metadata carries a `git+https` (direct
    # reference) dependency — listing them here would make `seqforge` unpublishable. They stay declared
    # in the pixi tables below (`[tool.pixi.pypi-dependencies]`), which pixi reads and which never fold
    # into the built wheel's metadata, so a `pixi install` / cluster checkout is unchanged. Both are
    # lazily imported, so the compiler's metadata/harvest path runs without them; a PyPI user who wants
    # the lab-only features (real-genome `compose`, `kb e2e`) installs them separately from git:
    #     pip install "liulab-genome @ git+https://github.com/liuhlab/liulab-genome.git" \
    #                  "liulab-data   @ git+https://github.com/liuhlab/liulab-data.git"
    # `io/archive.py` uses labdata to expand a GEO/SRA/BioProject accession (incl. a GEO SuperSeries our
    # own SOFT recursion missed) into its SRA experiments; `compose`/`kb e2e` use liulab-genome to
    # resolve the STAR index at run time.
    # `harvest extract` is the ONE stage that touches an LLM; every other verb runs without it
    # (`run --no-llm` drives the whole compiler minus extraction). Both clients are optional at
    # runtime (lazy-imported) — the provider layer keeps seqforge un-locked-in to either vendor.
    "anthropic>=0.40",
    "openai>=1.40",   # client for ANY OpenAI-compatible endpoint (DeepSeek, vLLM, Ollama, ...)
]

[project.urls]
Homepage = "https://github.com/liuhlab/seqforge"
Issues = "https://github.com/liuhlab/seqforge/issues"
Changelog = "https://github.com/liuhlab/seqforge/blob/main/CHANGELOG.md"

[project.scripts]
seqforge = "seqforge.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/seqforge"]

# No `force-include` for the data files. `packages = ["src/seqforge"]` already carries every
# non-Python file under the tree — the pre-packed whitelists (`io/onlists/*.codes.gz` + `index.json`),
# the hand-written `.smk` modules, and the KB specs — and adding a force-include on top is a hard
# build error ("a second file is being added at the same path"), not a silent duplicate. Verified by
# `test_the_wheel_ships_the_data_the_package_cannot_work_without`, which builds a wheel and looks:
# each of those absent is a specific, silent failure (compose exiting 3 on every 10x dataset; a
# Snakefile including a module that is not there), and none of them is Python.

# NO `[tool.hatch.metadata] allow-direct-references` here — on purpose. `[project].dependencies`
# carries no `git+https` references (they would make the wheel unpublishable to PyPI; see the note by
# `anndata` above), so the escape hatch is unnecessary. Its absence is also a tripwire: re-adding a
# direct reference to `[project].dependencies` fails the hatchling build loudly, before a PyPI upload
# gets the chance to reject it. The lab git packages live only in the pixi tables below, which never
# reach the wheel's metadata.

# -------- pixi --------

[tool.pixi.workspace]
channels = ["conda-forge", "bioconda"]
platforms = ["osx-arm64", "linux-64", "osx-64"]

[tool.pixi.pypi-dependencies]
seqforge = { path = ".", editable = true }
# In one line: we are a CONSUMER of liulab-genome, so we depend on it rather than reimplement it.
# Two things need it importable, and both are real: `rule genome_index` resolves the STAR index in a
# `run:` directive (which executes in the snakemake process, so the env running the pipeline must have
# it), and `kb e2e`'s `discover_assets` uses it to find a reference. Declaring the dependency is the
# opposite of the "parallel universe" we forbid — the AST guard still refuses a `class Genome`,
# `def build_star_index` or `def register_gtf` anywhere in src/, and that is the line that matters.
liulab-genome = { git = "https://github.com/liuhlab/liulab-genome.git" }
# We are likewise a CONSUMER of liulab-data (`labdata`): `io/archive.py` calls its Entrez-backed
# `experiments_for(accession)` resolver for the accession -> SRA-experiments hop, which fixes the GEO
# SuperSeries case our own SOFT recursion missed. Both lab packages ship together in liulab-runtime's
# `lab` feature, so this adds no environment the cluster does not already have.
liulab-data = { git = "https://github.com/liuhlab/liulab-data.git" }

[tool.pixi.dependencies]
pydantic = ">=2.7"
pyyaml = ">=6"
numpy = ">=2"
pooch = ">=1.8"
typer = ">=0.12"
requests = ">=2.31"
tqdm = ">=4"
pypdf = ">=4"          # harvest reads the paper; see the comment in [project].dependencies
openpyxl = ">=3.1"     # harvest reads supplementary .xlsx tables; see [project].dependencies
anndata = ">=0.10"     # the pilot's deliverable format; see [project].dependencies
anthropic = ">=0.40"   # harvest extract only — one of two swappable LLM clients
openai = ">=1.40"      # OpenAI-compatible endpoints (DeepSeek preset, vLLM, Ollama, ...)
# liulab-genome's transitive needs, mirrored from liulab-runtime's `lab` feature. A hand-kept mirror
# of someone else's dependency list is the shape this repo distrusts — but it is upstream's list, the
# honest alternative (importing their solve) does not exist, and the failure mode is loud: a missing
# one is an ImportError at `import genome`, not a wrong number.
pandas = ">=2.1,<3"     # liulab-genome needs pandas <3
gffutils = "*"          # liulab-genome (genome.io.gtf)
ucsc-fatotwobit = "*"   # faToTwoBit, shelled out to by liulab-genome
ucsc-twobitinfo = "*"   # twoBitInfo, shelled out to by liulab-genome
pymupdf = ">=1.28.0,<2"      # DEFAULT PDF text backend (robust; AGPL-3.0); see [project].dependencies
pdfplumber = ">=0.11.10,<0.12"  # in-text table -> markdown, spliced into canonical text; see [project]

# `wf` — the workflow toolchain, present so compose's wiring gate ACTUALLY RUNS.
#
# `minimal` because we need the DAG builder and nothing else: no executor plugins, no cluster
# submission (that is the user's job, deliberately).
#
# **It must be in every environment that runs the suite, and that is the whole point.** `snakemake`
# was in no dependency table at all, so `have("snakemake")` was False everywhere, so `wiring_gate`
# returned "skip", so the test asserting `gate["wiring"] in {"pass","skip"}` forbade only the value
# that could not occur. A skip is green. Everything the gate exists to catch -- a misspelled flag, a
# broken wildcard, a rule wiring mistake -- was uncaught for the life of the repo.
#
# **STAR and samtools are deliberately absent from every table in this file.** Both are runtime
# tools liulab-runtime provides -- STAR in its `align-rna` feature, samtools in its base layer (so
# every env has it) -- and pinning either here is the "parallel universe" this repo forbids. The
# `starsolo_count` and `solo_to_cram` rules name `ghcr.io/liuhlab/liulab-runtime:align-rna` for them;
# `seqforge io cram` shells out to the samtools that image carries, never one this package installs.
[tool.pixi.feature.wf.dependencies]
snakemake-minimal = ">=8"

[tool.pixi.feature.py313.dependencies]
python = "3.13.*"

[tool.pixi.feature.test.dependencies]
pytest = "*"
pytest-cov = "*"
hypothesis = "*"
syrupy = "*"

[tool.pixi.feature.dev.dependencies]
ruff = "*"
mypy = "*"
pre-commit = "*"
python-build = "*"
types-pyyaml = "*"
types-requests = "*"
types-openpyxl = "*"

[tool.pixi.feature.docs.dependencies]
mkdocs-material = "*"

[tool.pixi.environments]
default = { features = ["py313", "dev", "test", "docs", "wf"], solve-group = "default" }
test    = { features = ["py313", "test", "wf"], solve-group = "default" }
docs    = { features = ["py313", "docs"], solve-group = "default" }

[tool.pixi.tasks]
lint      = "ruff check ."
fmt       = "ruff format ."
fmt-check = "ruff format --check ."
# mypy is STRICT and scoped to the modules where a wrong type poisons the corpus (brief §13):
# models/ + probe/ (the brief's two) + resolve/ (a wrong type there poisons a decision) +
# manifest/ + compose/ + workflows/ (a wrong type there poisons every emitted pipeline param) +
# evals/ (it computes the numbers we trust; a wrong type there silently corrupts a metric, and a
# broken measuring instrument is worse than none because it still reads green).
typecheck = "mypy src/seqforge/models src/seqforge/probe src/seqforge/resolve src/seqforge/manifest src/seqforge/compose src/seqforge/workflows src/seqforge/harvest src/seqforge/fingerprint src/seqforge/evals"
test      = "pytest"
test-cov  = "pytest --cov=seqforge --cov-report=term-missing"
check     = { depends-on = ["lint", "fmt-check", "typecheck", "test"] }
build     = "python -m build"
install-skills = "python skills/install.py --user"
docs      = "mkdocs serve"
docs-build = "mkdocs build --strict"

# -------- tool config --------

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py312"
extend-exclude = [".pixi", "site", "build", "dist"]

[tool.ruff.lint]
# Base set from liulab-runtime (E,W,F,I,UP,B); E501 handled by the formatter.
select = ["E", "W", "F", "I", "UP", "B"]
# E501: formatter handles line length. UP046/UP047: keep classic Generic[T]/TypeVar for the
# best-tested pydantic-v2 + mypy generic support rather than PEP 695 syntax.
ignore = ["E501", "UP046", "UP047"]

[tool.ruff.lint.flake8-bugbear]
# Typer uses call expressions (Option/Argument) as parameter defaults by design.
extend-immutable-calls = ["typer.Argument", "typer.Option"]

# mypy --strict, scoped by the `typecheck` task to models/, probe/, and resolve/.
[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
plugins = ["pydantic.mypy"]
# Strict is applied to the modules passed on the command line; imports they pull in that are NOT in
# scope (io/, kb/) are followed for types but their own errors are silenced — so resolve/ is checked
# strictly against a concrete io/kb interface without forcing numpy/yaml internals under --strict.
follow_imports = "silent"

# `scipy` ships no type information and `scipy-stubs` is a partial, separately-versioned third-party
# effort. Untyped is the honest state, so say so here rather than sprinkle `# type: ignore` at each
# import. Scoped to scipy alone — every other import in the strict modules is checked.
#
# The type of `csr_matrix` is not what protects the deliverable anyway: what does is
# `test_the_matrix_is_transposed_to_cells_by_genes`, which asserts a specific count landed at a
# specific (cell, gene) in a NON-square matrix. mypy could not have caught a transpose either way.
[[tool.mypy.overrides]]
module = ["scipy.*"]
ignore_missing_imports = true

# PyMuPDF ships a `py.typed` marker but leaves `open` (and more) unannotated, and pdfplumber ships no
# stubs at all. Both are third-party PDF engines we call through one thin, guarded function each in
# `harvest/normalize.py` (`_pymupdf_pages`, `_pdf_tables`). Skip following their imports so `--strict`
# does not trip on their incomplete typing; the honest state is untyped, and the surface we touch is
# tiny and covered by `test_harvest.py`.
[[tool.mypy.overrides]]
module = ["pymupdf", "pymupdf.*", "pdfplumber", "pdfplumber.*"]
ignore_missing_imports = true
follow_imports = "skip"

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-ra", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = ["error"]

[tool.coverage.run]
branch = true
source = ["src/seqforge"]
